# nvfp4-vllm

./: .gitignore  GUIDE.md  LICENSE  README.md  chat.py  gemma4_moe.py  gemma4_vllm_patch.py  pyproject.toml  quantize.py  serve.py
.claude/: settings.local.json
